lastmanstanding enabled with nodelists

--- a/corosync.conf
+++ b/corosync.conf
@@ -20,7 +20,7 @@ totem {
 		# identical instances of this configuration file
 		# across all your cluster nodes, without having to
 		# modify this option.
-		bindnetaddr: 192.168.163.30
+		bindnetaddr: 192.168.163.10
 		# However, if you have multiple physical network
 		# interfaces configured for the same subnet, then the
 		# network address alone is not sufficient to identify
@@ -46,6 +46,20 @@ totem {
 		# specifically enabled on most network routers.
 		ttl: 1
 	}
+cluster_name: HACK
+#specify we dont use unicast or anycast
+         transport: udpu 
+}
+nodelist {
+    node { 
+                ring0_addr: 192.168.163.10
+         }
+    node {
+               ring0_addr: 192.168.163.20
+	}
+    node {
+               ring0_addr: 192.168.163.30
+        }
 }
 
 logging {
@@ -79,4 +93,7 @@ quorum {
 	# see also corosync.conf.5 and votequorum.5
 	provider: corosync_votequorum
         expected_votes: 3
+        wait_for_all: 1
+        last_man_standing: 1
+        last_man_standing_window: 10000
 }
